# nexora-frontend

./: .env  .env.example  HANDOFF.md  README.md  capacitor.config.ts  index.html  package-lock.json  package.json  playwright.config.ts  run-all.sh  stop-all.sh  tailwind.config.js  tsconfig.app.json  vite.config.ts
.github/workflows/: ci.yml
scripts/: build-launch-pdf.mjs
src/: App.tsx  pwa.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Breadcrumb.tsx  ErrorBoundary.tsx  KeyboardShortcuts.tsx  Pagination.tsx  RouteGuard.tsx  SkipToContent.tsx  Toast.tsx
src/components/charts/: index.tsx
src/components/dashboard/: KPICard.tsx
src/components/navigation/: CommandPalette.tsx  MobileBottomNav.tsx  Sidebar.tsx  Topbar.tsx
src/components/scanner/: BarcodeScannerModal.tsx
src/components/ui/: index.tsx
src/constants/: index.ts  permissions.ts
src/hooks/: index.ts  useAiStream.ts  useBarcodeScanner.test.ts  useBarcodeScanner.ts
src/i18n/: index.tsx
src/i18n/locales/: en-KE.json  sw-KE.json
src/layouts/: AppLayout.tsx
src/mock/: data.ts
src/modules/etims/: client.ts
src/modules/mpesa/: client.ts
src/modules/offline/: queue.ts
src/modules/whatsapp/: share.ts
src/pages/: index.ts
src/pages/AIAssistant/: index.tsx
src/routes/: index.tsx
src/services/: api.ts  auth.ts  index.ts  queries.ts  queryKeys.ts
src/store/: index.ts
src/styles/: globals.css
src/test/: setup.ts  utils.tsx
src/types/: index.ts
src/utils/: demoActions.ts  index.ts  pdf.ts  permissions.ts
test/e2e/: smoke.spec.ts
(+26 files in other folders)
